<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Mode" Id="{60834d9d-72d4-4363-aa6b-f5c562f2fac0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Mode :
(
	disabled := 0,
	manual,
	auto
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>